# coinTrader_Trainer

./: .env.example  .flake8  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PLAN.md  README.md  VULTURE_NOTES.md  backtest.py  bandit_train.py  bootstrap_env.py  build_lightgbm_gpu.ps1  cache_utils.py  ccxt_fetch_all.py  cfg.yaml  config.py  data_import.py  data_loader.py  dml_utils.py  evaluation.py  fallback_b64.txt  feature_engineering.py  federated_fl.py  federated_trainer.py  historical_data_importer.py  kraken_fetch.py  ml_trainer.py  opencl_utils.py  optuna_optimizer.py  pyproject.toml  regime_classifier.py  registry.py  requirements.txt  ruff.toml  swarm_sim.py  train_fallback_model.py  train_meta_selector.py  train_pipeline.py  train_regime_model.py  (+1 more)
crypto_bot/: ml_signal_model.py
examples/: README.md  bootstrap_env.py  cointrader2_integration.py
ml_trainer/: build_utils.py
rl/: __init__.py  ppo_selector.py  rl.py  rl_bot.py  strategy_selector.py
src/: __init__.py  feature_engineering.py  registry.py
tests/: conftest.py  test_artifacts.py  test_backtest.py  test_backtest_sim.py  test_batch_utils.py  test_build_lightgbm.py  test_build_utils.py  test_ccxt_fetch_all.py  test_cfg_defaults.py  test_cli_aggregate_help.py  test_cli_autobacktest_help.py  test_cli_batch_help.py  test_cli_csv7_help.py  test_cli_flags.py  test_cli_help.py  test_cli_param_merging.py  test_config.py  test_csv7_ingest.py  test_csv_train_smoke.py  test_data_import.py  test_data_validation.py  test_dml_utils.py  test_error_propagation.py  test_evaluation.py  test_feature_build.py  test_feature_engineering.py  test_feature_reorder.py  test_federated_flower.py  test_federated_gpu.py  test_federated_trainer.py  test_fetch_data_async.py  test_get_client.py  test_get_redis_client.py  test_gpu_profile_flag.py  test_gpu_training.py  test_historical_data_importer.py  test_indicators.py  test_kraken_fetch.py  test_label_mapping.py  test_lightgbm_gpu_build.py  (+31 more)
tools/: cleanup_old_files.py  deadcode.sh  meme_trainerd.py  train_fallback_lgbm.py  train_fallback_model.py  train_meta_selector.py  train_meta_selector_lgbm.py  train_regime_model.py
trainers/: __init__.py  federated.py  meme_features.py  meme_trainer.py  regime_lgbm.py
utils/: __init__.py  timing.py  (+8 more)
(+58 files in other folders)
