[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "coinTrader_Trainer"
version = "0.1.0"
dependencies = [
"ccxt",
"fakeredis",
"flwr",
"httpx",
"joblib",
"jsonschema",
"lightgbm",
"networkx",
"numpy",
"numba",
"optuna",
"pandas",
"backtrader",
"pyarrow",
"pyopencl",
"pytest",
"pytest-asyncio",
"python-dotenv",
"pytz",
"pyyaml",
"redis",
"requests",
"scikit-learn",
"scipy",
"statsmodels",
"prometheus_client",
"supabase==2.18.0",  # supabase-py client
"stable-baselines3==2.7.0",
"torch==2.3.1",  # ROCm-enabled build
"tenacity",
"modin[ray]",
"dask[dataframe]",
"stable-baselines3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["coinTrader_Trainer*"]
