[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cointrader-trainer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "numpy>=1.26",
  "pyarrow>=16; extra == 'train' or extra == 'dev'",  # OPTIONAL: leave pyarrow out of base
  "pytz",
  "tenacity",
  "requests",
]

[project.optional-dependencies]
train = [
  "lightgbm>=4.0",
  "scikit-learn>=1.4",
  "joblib>=1.3",
  "networkx",
]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "hypothesis>=6",
  "ruff",
  "vulture",
]
gpu = ["pyopencl"]
flwr = ["flwr"]
talib = ["TA-Lib"]
accel = ["numba", "jax"]

[project.scripts]
cointrainer = "cointrainer.cli:main"

